<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tkio_ros</name>
  <version>0.0.1</version>
  <description>Takes ackermann navigation messages and sends them to the tkio pico ESC.</description>
  <maintainer email="Andrew@Ealovega.dev">Andrew Ealovega</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
